<resources>
    <string name="app_name">티처 포 보스</string>
    <string name="pwSame">비밀번호가 일치합니다</string>
    <string name="pwDifferent">비밀번호가 일치하지 않습니다</string>
    <string name="id_or_pw_different">아이디 또는 비밀번호가 맞지 않습니다.</string>
    <string name="social_login_fail">소셜 로그인 실패</string>
    <string name="exit_warning">뒤로가기를 한 번 더 누르면 종료됩니다.</string>
    <string name="login_loading">로딩중입니다. 잠시만 기다려주세요</string>
    <string name="boss_talk_fragment">bosstalk fragement입니다</string>
    <string name="my_page_fragment">mypage fragement입니다</string>
    <string name="naver_client_id">arPMXPe7ew3tmToDKvgA</string>
    <string name="naver_client_secret">tazdlVePfj</string>
    <string name="find_email">이메일 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="format_pw_false">비밀번호 조건을 충족시키지 않습니다.</string>
    <string name="format_re_pw_false">재입력한 비밀번호가 일치하지 않습니다.</string>
    <string name="nickname_input">닉네임을 입력해주세요.</string>
    <string name="verify_nickname">특수문자 제외 10자 이내로 작성해주세요.</string>
    <string name="nickname_available">사용 가능한 닉네임입니다</string>
    <string name="nickname_unavailable">사용할 수 없는 닉네임입니다.</string>
    <string name="verify_email_info">해당 메일로 인증 번호가 발송되었습니다.</string>
    <string name="verify_phone_info">인증번호가 발송되었습니다.</string>
    <string name="verified_true">인증되었습니다.</string>
    <string name="verified_false">인증번호가 올바르지 않습니다.</string>
    <string name="format_true">올바른 형식입니다</string>
    <string name="format_false">올바르지 않은 형식입니다</string>
    <string name="verify_phone">전화번호는 10 ~ 11 자리의 숫자만 입력 가능합니다.</string>
    <string name="verify_email">이메일 형식이 아닙니다.</string>
    <string name="email_unavailable">이미 가입된 이메일 주소입니다.</string>
    <string name="phone_unavailable">이미 가입된 전화번호입니다.</string>
    <string name="timeover_true">"인증번호 다시 받기"</string>
    <string name="timeover_false">"인증번호를 받지 못하셨나요?"</string>
    <string name="string_menu_home">홈</string>
    <string name="string_menu_teacher_talk">티처Talk</string>
    <string name="string_menu_boss_talk">보스Talk</string>
    <string name="string_menu_my_page">마이페이지</string>
    <string name="tv_teacher_talk">티처톡</string>
    <string name="tv_question_pay_teacher_btn"><u>티포 %dTP</u></string>
    <string name="tv_question_pay_boss_btn"><u>질문권 무료 체험 중</u></string>
    <string name="teacher_talk_main_text1">티처Talk에서 궁금증을 해결할 수 있어요</string>
    <string name="teacher_talk_main_text2"><b>티처에게 물어보세요!</b></string>
    <string name="teacher_talk_ask_hint">※ 티처Talk 질문 작성 요령\n
• 여러 질문보다 핵심 질문 한가지에 집중해 주세요\n
• 추상적인 질문보다 보스가 처한 구체적인 상황과 고민을 적어주세요\n
• 카테고리에 맞는 질문일수록 빠르게 답변을 받을 수 있어요\n\n

※ 티처Talk 질문 작성 정책\n
• 답변이 달리면 질문글을 수정하거나 삭제할 수 없어요\n
• 최종 수정 시간을 기준으로 일주일 내에 답변이 달리지 않았을 때 질문권을 돌려드려요\n
• 답변이 달리고 일주일 동안 채택하지 않으면 자동으로 한명의 티처가 채택돼요\n\n

※ 티처Talk 커뮤니티 정책\n
티처포보스 커뮤니티 운영 정책에 따라 다른 이용자의 안전을 저해하거나 권리를 침해하는 내용의 게시물은 별도의 통보 없이 게재가 제한되거나 삭제될 수 있으며 커뮤니티 활동이 제한될 수 있습니다.</string>
    <string name="search_view_hint">궁금한 키워드를 입력하세요</string>
    <string name="more_card">게시물 더 불러오기</string>
    <string name="tv_answer_chosen">채택된 답변입니다.</string>
    <string name="tv_boss_talk">보스톡</string>
    <string name="tv_boss_talk_1"><b>모두가 자유롭게 소통해요</b></string>
    <string name="tv_boss_talk_2">보스 TALK</string>
    <string name="boss_talk_write_hint">※ 보스Talk 커뮤니티 정책\n
티처포보스 커뮤니티 운영 정책에 따라 다른 이용자의 안전을 저해하거나 권리를 침해하는 내용의 게시물은 별도의 통보 없이 게재가 제한되거나 삭제될 수 있으며 커뮤니티 활동이 제한될 수 있습니다.</string>
    <string name="teacher_talk_card_view_question"><b>Q. %s</b></string>
    <string name="teacher_talk_card_view_text">%s</string>
    <string name="card_view_statement_solved">채택 완료</string>
    <string name="card_view_statement_not_solved">답변 대기중</string>
    <string name="teacher_talk_bookmark_count">%s</string>
    <string name="teacher_talk_comment_count">댓글 %d개</string>
    <string name="teacher_talk_like_count">%s</string>
    <string name="like">좋아요</string>
    <string name="like_any">좋아요 %s</string>
    <string name="bookmark">저장</string>
    <string name="bookmark_any">저장 %s</string>
    <string name="investigation_first_field_button1">세무 기장 이용 O</string>
    <string name="investigation_first_field_button2">세무 기장 이용 X</string>
    <string name="investigation_second_field_title">사업자등록 정보</string>
    <string name="investigation_second_field_hint">ex. 개업일: 2018.05.10, 업태: 숙박 및 음식점업, 종목: 커피 전문점</string>
    <string name="investigation_third_field_title">사업장 정보</string>
    <string name="investigation_third_field_hint">ex. 위치: 서울특별시 성북구, 약 30평 규모 개인 카페 운영 중</string>
    <string name="investigation_fourth_field_title">직원 관리</string>
    <string name="investigation_fourth_field_hint">ex. 정규직 직원 2명, 4대 보험 가입 처리</string>
    <string name="investigation_fifth_field_title">구입 증빙</string>
    <string name="investigation_fifth_field_hint">ex. 식자재는 거래처로부터 세금계산서 발급, 일부 현금영수증 발행</string>
    <string name="investigation_sixth_field_title">매출 규모 및 사업자 구분(개인/법인)</string>
    <string name="investigation_sixth_field_hint">ex. 연 매출액 5천만원, 개인 사업자</string>
    <string name="labor_first_field_button1">근로계약서 작성 O</string>
    <string name="labor_first_field_button2">근로계약서 작성 X</string>
    <string name="labor_third_field_title">직원 계약 형태 및 기간</string>
    <string name="labor_third_field_hint">ex. 아르바이트 3명(6개월)</string>
    <string name="labor_fourth_field_title">직원 근로시간 및 휴게시간</string>
    <string name="labor_fourth_field_hint">ex. 주 20시간 근무, 4시간마다 30분 휴게 시간</string>
    <string name="labor_fifth_field_title">급여 정보</string>
    <string name="labor_fifth_field_hint">ex. 시급 11,000원, 주말 근무 시간당 1.5배 수당</string>
    <string name="labor_sixth_field_title">법적 복리후생</string>
    <string name="labor_sixth_field_hint">ex. 아르바이트 직원 미가입</string>
    <string name="business_first_field_button1">매장 운영중</string>
    <string name="business_first_field_button2">예비 자영업자</string>
    <string name="business_second_field_title">업종 및 주요 메뉴</string>
    <string name="business_second_field_hint">ex. 한식주점(수육, 전통주), 베이커리 카페(크로플, 커피)</string>
    <string name="business_third_field_title">매장 위치 및 규모</string>
    <string name="business_third_field_hint">ex. 성북구 삼선교로 대로변에 위치한 20평 규모의 카페</string>
    <string name="business_fourth_field_title">주요 고객 및 목표 고객</string>
    <string name="business_fourth_field_hint">ex. 20대 여성, 인근 대학교 학생들</string>
    <string name="business_fifth_field_title">매장 정보(매출, 객단가, 주문 수 등)</string>
    <string name="business_fifth_field_hint">ex. 최근 한달 매출 1천만, 객단가 1만, 배달앱 기준 재주문 13%</string>
    <string name="business_sixth_field_title">가용 예산</string>
    <string name="business_sixth_field_hint">ex. 마케팅 활용 가능 예산 150만, SONY ZV-10 카메라 보유</string>
    <string name="category_market">market</string>
    <string name="category_tax">tax</string>
    <string name="category_labor">labor</string>
    <string name="extra_data_user_type">작성자 유형</string>
    <string name="extra_business_type">사업자등록 정보</string>
    <string name="extra_sales_scale">매출 규모/사업자 구분</string>
    <string name="extra_employment_type_duration">직원 계약 형태/기간</string>
    <string name="extra_work_break_hours">직원 근로/휴게 시간</string>
    <string name="extra_business_type_menu">업종/메뉴</string>
    <string name="extra_location_scale">매장 위치/규모</string>
    <string name="extra_customer_type">타겟층</string>
    <string name="extra_store_info">매장 정보</string>
    <string name="boss_talk_title"><b>%s</b></string>
    <string name="boss_talk_content">%s</string>
    <string name="boss_talk_date">%s</string>
    <string name="boss_talk_bookmark_count">%s</string>
    <string name="boss_talk_comment_count">답변 %d개</string>
    <string name="boss_talk_like_count">%s</string>
    <string name="boss_talk_nickname_teacher">%s 티처</string>
    <string name="boss_talk_nickname_boss">%s 보스</string>
    <string name="nickname_none">(알 수 없음)</string>
    <string name="filter_name">%s</string>
    <string name="dropdown_name">DropdownExample</string>
    <string-array name="dropdown_items">
        <item>최신순</item>
        <item>조회수순</item>
        <item>좋아요순</item>
    </string-array>
    <string name="sign_up_title">티처포보스에 오신 것을 환영합니다!</string>
    <string name="sign_up_boss">보스로 시작하기</string>
    <string name="sign_up_boss_info1">누구나 가입할 수 있어요</string>
    <string name="sign_up_boss_info2">티처Talk에서 궁금한 것을 질문하고\n보스Talk에서 다른 사장님들과\n자유롭게 이야기 나눌 수 있어요</string>
    <string name="sign_up_teacher">티처로 시작하기</string>
    <string name="sign_up_teacher_info1">티처포보스의 심사 과정이 필요해요</string>
    <string name="sign_up_teacher_info2">티처Talk에서 보스가 남긴 질문에\n답변을 남기고 보상을 받아요</string>
    <string name="sinup_next_btn">다음 단계</string>
    <string name="signup_re_verify">다시 인증하기</string>
    <string name="signup_insert_info">정보 입력하러 가기</string>
    <string name="sign_up_finish_boss">%s 보스,\n회원가입을 축하합니다!</string>
    <string name="sign_up_finish_teacher">%s 티처,\n 회원가입을 축하합니다!</string>
    <string name="sign_up_judge_tilte">"심사가 완료된 후\n티처로 활동할 수 있습니다."</string>
    <string name="sign_up_judge_sub_tilte">"영업일 기준 3~5일 내에\n가입하신 번호로 연락드리겠습니다."</string>
    <string name="sign_up_finish_teacher_info">적극적인 티처포보스 활동으로\n티처레벨을 올려보세요!</string>
    <string name="business_info_title">사업자 인증을 해주세요.</string>
    <string name="business_info_desc1">"사업자 등록번호/성명/개업연월일이"</string>
    <string name="business_info_desc2">"동일해야 다음 단계로 넘어갈 수 있어요"</string>
    <string name="business_info_next_btn">정보 입력하러 가기</string>
    <string name="business_register">정보를 입력해주세요</string>
    <string name="business_verify">사업자 정보 인증을</string>
    <string name="business_verify_success">성공했어요</string>
    <string name="business_verify_fail">실패했어요</string>
    <string name="business_verify_fail_desc">유효하지 않은 사업자 정보예요</string>
    <string name="business_verify_help">문제가 생겼나요?</string>
    <string name="account_title">계좌를 등록해 주세요</string>
    <string name="account_desc">답변에 대한 보상을 받을 수 있어요</string>
    <string name="bank_title">은행을 선택해 주세요</string>
    <string name="home_logo">티처포보스</string>
    <string name="home_banner_position">%s / %s</string>
    <string name="home_teacher_talk_shortcut">티처Talk 바로가기</string>
    <string name="home_teacher_talk_popular_post">티처Talk 인기글</string>
    <string name="home_boss_talk_popular_post">보스Talk 인기글</string>
    <string name="home_weekly_best_teacher">이번 주 인기 티처</string>
    <string name="home_teacher_talk_all">전체</string>
    <string name="home_teacher_talk_marketing">마케팅</string>
    <string name="home_teacher_talk_hygiene">위생</string>
    <string name="home_teacher_talk_area">상권</string>
    <string name="home_teacher_talk_operate">노하우</string>
    <string name="home_teacher_talk_employee">직원관리</string>
    <string name="home_teacher_talk_interior">인테리어</string>
    <string name="home_teacher_talk_policy">세무</string>
    <string name="home_weekly_best_teacher_specialty_career">%s분야 | 경력 %s년</string>
    <string name="recommed_option">추천해요 %d개</string>
    <string name="not_recommed_option">추천하지 않아요 %d개</string>
    <string name="comment_cnt">댓글 %d개</string>
    <string name="community_hashtag_input_space">스페이스바 입력은 불가능합니다.</string>
    <string name="community_hashtag_input_number">"해시태그는 5개까지 입력 가능합니다."</string>
    <string name="exchange_check">확인했어요</string>
    <string name="exchange_complete1">환전 신청이 완료되었습니다!</string>
    <string name="exchange_complete2">✔️ 영업일 기준 3일 내로 입금됩니다.</string>
    <string name="exchange_complete3">✔️ 환전 신청한 내역은 마이페이지에서 확인 가능합니다.</string>
    <string name="check_account1">계좌정보를 확인해주세요</string>
    <string name="check_account2">변경된 정보를 수정할 수 있습니다.</string>
    <string name="choose_bank">은행 선택</string>
    <string name="input_account">계좌번호 입력</string>
    <string name="input_name">예금주명 입력</string>
    <string name="hint_input_account">계좌번호를 입력해주세요</string>
    <string name="hint_input_name">예금주명을 입력해주세요</string>
    <string name="account_complete">완료</string>
    <string name="ask_payment_title">구독권 결제</string>
    <string name="ask_payment_head">구독권 구매하고\n티처에게 질문하세요.</string>
    <string name="ask_payment_check">✔️ 질문권 1개로 전문가에게 빠르게 답변 받기\n✔️ 여러명의 전문가에게 답변을 받아요\n✔️ 24시간 365일 답변받을 수 있어요</string>
    <string name="ask_payment_buy">구매하기</string>
</resources>