<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myPageViewModel"
            type="com.example.teacherforboss.presentation.ui.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include_my_page_top_app_bar"
            layout="@layout/view_top_app_bar_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/ask_payment_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/spacing16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_my_page_top_app_bar">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_payment_head"
                android:textAppearance="@style/TextAppearance.TeacherForBoss.Title1"
                android:lineHeight="35dp"
                android:textColor="@color/Gray700"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ask_payment_check" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ask_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_buy"
                style="@style/Theme.TeacherForBoss.Button.Exam.NEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ask_payment_buy"
                android:backgroundTint="@color/Purple600"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>