<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="accountViewModel"
            type="com.example.teacherforboss.presentation.ui.mypage.account.AccountViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.auth.signup.teacher.BusinessFragment">

        <TextView
            android:id="@+id/tv_check_account1"
            android:textColor="@color/Gray800"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_account1"
            android:paddingVertical="8dp"
            android:textSize="24sp"
            android:fontFamily="@font/pretendard_semibold"
            android:layout_marginTop="44dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_check_account2"
            android:textColor="@color/Gray700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.TeacherForBoss.Body.Medium.14"
            android:text="@string/check_account2"
            android:paddingVertical="4dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_check_account1"
            app:layout_constraintStart_toStartOf="@id/tv_check_account1" />

        <TextView
            android:id="@+id/tv_choose_bank"
            android:textColor="@color/Gray700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_bank"
            android:paddingVertical="5dp"
            android:layout_marginTop="32dp"
            android:textSize="14sp"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintTop_toBottomOf="@id/tv_check_account2"
            app:layout_constraintStart_toStartOf="@id/tv_check_account2" />

        <TextView
            android:id="@+id/chosen_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_signup"
            android:paddingVertical="19dp"
            android:textSize="14sp"
            android:inputType="number"
            android:text="@={accountViewModel._chosenBank}"
            android:paddingHorizontal="10dp"
            android:hint="클릭하여 은행을 선택해주세요"
            android:textColorHint="@color/gray_02"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/pretendard_light"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_input_account"
            android:textColor="@color/Gray700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_account"
            android:paddingVertical="5dp"
            android:layout_marginTop="38dp"
            android:textSize="14sp"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintTop_toBottomOf="@id/chosen_bank"
            app:layout_constraintStart_toStartOf="@id/chosen_bank" />

        <EditText
            android:id="@+id/et_input_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_signup"
            android:paddingVertical="19dp"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            android:inputType="number"
            android:textColorHint="@color/gray_02"
            android:hint="@string/hint_input_account"
            android:text="@={accountViewModel._etInputAccount}"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/pretendard_light"
            app:layout_constraintTop_toBottomOf="@id/tv_input_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_input_name"
            android:textColor="@color/Gray700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_name"
            android:paddingVertical="5dp"
            android:layout_marginTop="38dp"
            android:textSize="14sp"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintTop_toBottomOf="@id/et_input_account"
            app:layout_constraintStart_toStartOf="@id/et_input_account" />

        <EditText
            android:id="@+id/et_input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_signup"
            android:paddingVertical="19dp"
            android:textSize="14sp"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:hint="@string/hint_input_name"
            android:text="@={accountViewModel._etInputName}"
            android:textColorHint="@color/gray_02"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/pretendard_light"
            app:layout_constraintTop_toBottomOf="@id/tv_input_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete"
            android:background="@drawable/radius_purple_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Purple600"
            android:textAppearance="@style/TextAppearance.TeacherForBoss.Title.SemiBold.16"
            android:textColor="@color/white"
            android:text="@string/account_complete"
            android:enabled="@{accountViewModel.enableNext}"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>