<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.mypage.exchange.account_change_fragment">

        <ImageView
            android:id="@+id/iv_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_exchange"
            android:layout_marginHorizontal="61dp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_exchange_complete1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_complete1"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:paddingVertical="7dp"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_semibold"
            app:layout_constraintTop_toBottomOf="@id/iv_coin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_exchange_complete2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_complete2"
            android:layout_marginTop="26dp"
            android:textSize="12sp"
            android:paddingVertical="4dp"
            android:textColor="@color/Gray500"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_exchange_complete1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_exchange_complete3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_complete3"
            android:textSize="12sp"
            android:paddingVertical="4dp"
            android:textColor="@color/Gray500"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_exchange_complete2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_purple_button"
            android:backgroundTint="@color/selector_all_btn_background"
            android:textAppearance="@style/TextAppearance.TeacherForBoss.Title.SemiBold.16"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/exchange_check"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>