<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/Gray200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_boss_talk_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/boss_talk_title"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/Gray700"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_boss_talk_content"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:maxLines="2"
            android:text="@string/boss_talk_content"
            android:fontFamily="@font/pretendard_regular"
            android:textColor="@color/Gray500"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_boss_talk_title" />

        <TextView
            android:id="@+id/tv_boss_talk_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/boss_talk_date"
            android:fontFamily="@font/pretendard_regular"
            android:textColor="@color/Gray400"
            android:layout_marginTop="6dp"
            android:textSize="9sp"
            app:layout_constraintTop_toBottomOf="@id/tv_boss_talk_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



        <ImageView
            android:id="@+id/ic_boss_talk_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_bookmark"
            app:layout_constraintBottom_toBottomOf="@id/tv_boss_talk_bookmark_count"
            app:layout_constraintEnd_toStartOf="@id/tv_boss_talk_bookmark_count"
            app:layout_constraintTop_toTopOf="@id/tv_boss_talk_bookmark_count" />

        <TextView
            android:id="@+id/tv_boss_talk_bookmark_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/teacher_talk_bookmark_count"
            android:textSize="9sp"
            android:textStyle="bold"
            android:textColor="@drawable/selector_color_purple600_gray300"
            app:layout_constraintBottom_toBottomOf="@id/ic_boss_talk_comment"
            app:layout_constraintEnd_toStartOf="@id/ic_boss_talk_comment"
            app:layout_constraintTop_toTopOf="@id/ic_boss_talk_comment" />


        <ImageView
            android:id="@+id/ic_boss_talk_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_comment_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_boss_talk_comment_count"
            app:layout_constraintEnd_toStartOf="@id/tv_boss_talk_comment_count"
            app:layout_constraintTop_toTopOf="@id/tv_boss_talk_comment_count" />

        <TextView
            android:id="@+id/tv_boss_talk_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_talk_comment_count"
            android:layout_marginEnd="8dp"
            android:textSize="9sp"
            android:textStyle="bold"
            android:textColor="@color/Gray300"
            app:layout_constraintBottom_toBottomOf="@id/ic_boss_talk_like"
            app:layout_constraintEnd_toStartOf="@id/ic_boss_talk_like"
            app:layout_constraintTop_toTopOf="@id/ic_boss_talk_like" />

        <ImageView
            android:id="@+id/ic_boss_talk_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_like"
            app:layout_constraintBottom_toBottomOf="@id/tv_boss_talk_like_count"
            app:layout_constraintEnd_toStartOf="@id/tv_boss_talk_like_count"
            app:layout_constraintTop_toTopOf="@id/tv_boss_talk_like_count" />

        <TextView
            android:id="@+id/tv_boss_talk_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/teacher_talk_like_count"
            android:textStyle="bold"
            android:textColor="@drawable/selector_color_purple600_gray300"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_boss_talk_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/Gray300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>